--- a/metadata.yaml
+++ b/metadata.yaml
@@ -232,7 +232,7 @@ plugins:
           title: "Project Snapshot"
           library: markdown
           display: |
-            #### Project Snapshot
+            ### Project Snapshot
 
             This dashboard analyzes U.S. military slot-machine revenue across Army, Navy, and Marine Corps installations worldwide from FY2020–FY2024. 
             The goal is to visualize geographic patterns, fiscal-year trends, and top-earning locations.
@@ -241,7 +241,7 @@ plugins:
 
             1. Extraction: Parsing raw PDF revenue reports across multiple fiscal years
             2. Transformation: Cleaning and standardizing branch, district, installation names, and monthly totals
-            3. Enrichment – Adding latitude and longitude through base-based geocoding
+            3. Enrichment: Adding latitude and longitude through base-based geocoding
             4. Loading: Publishing processed tables to Datasette with interactive dashboards and maps
            
             ## Plugins 
@@ -405,8 +405,6 @@ plugins:
                 - field: branch
                 - field: district
                 - field: total_revenue
-            width: 360
-            height: 280
         map_overview:
           title: "Installations Map"
           library: map
